--- a/estateManager/pom.xml
+++ b/estateManager/pom.xml
@@ -38,8 +38,14 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.8.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>de.is24.rest.api</groupId>
+			<artifactId>restapi-java-sdk</artifactId>
+			<version>0.2.14</version>
+		</dependency>
+
 
 	</dependencies>
 
