--- a/estateManager/package.json
+++ b/estateManager/package.json
@@ -14,7 +14,10 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
+    "react-jsonschema-form": "^0.39.0",
+    "react-tabs": "^0.7.0",
     "react-tools": "^0.13.3"
   },
   "devDependencies": {},
